--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,9 +5,108 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <div id="app"></div>
+    <header class="primary-header bg-primary-400">
+      <div class="container">
+        <a class="fs-primary-heading" href="#">Header Logo</a>
+        <nav class="primary-navigation">
+          <ul role="list" class="nav-list">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <div class="container">
+          <div class="hero bg-primary-400">
+            <div>
+              <h1 class="fs-primary-heading fw-bolder">
+                This website is awesome
+              </h1>
+              <p>
+                This website has some subtext that goes here under the main
+                title. It's a smaller font and the color is lower contrast
+              </p>
+              <button class="button">Sign up</button>
+            </div>
+            <div>
+              <p class="placeholder">this is a placeholder for an image</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <h2 class="fs-secondary-heading fw-bolder">
+            Some random information.
+          </h2>
+          <div class="square">
+            <p class="subtext">
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="square">
+            <p class="subtext">
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="square">
+            <p class="subtext">
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+          <div class="square">
+            <p class="subtext">
+              this is some subtext under an illustration or image
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="quote bg-primary-500">
+          <h3 class="fs-secondary-heading fw-light-italic">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </h3>
+          <p class="thor">-Thor, God of Thunder</p>
+        </div>
+      </section>
+
+      <section>
+        <div class="cta">
+          <h4>Call to action! It's time!</h4>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+          <button class="button">Sign up</button>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="copyright bg-primary-400">
+          <p>Copyright © The Odin Project 2021</p>
+        </div>
+      </div>
+    </footer>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
